# ai-engineering-from-scratch

./: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml
phases/00-setup-and-tooling/01-dev-environment/code/: Cargo.toml  hello-world.rs  hello-world.ts
phases/00-setup-and-tooling/04-apis-and-keys/code/: Cargo.toml  first_api_call_local.py  first_api_call_local.rs  first_api_call_local.ts
phases/00-setup-and-tooling/04-apis-and-keys/code/src/: main.rs
phases/00-setup-and-tooling/05-jupyter-notebooks/code/: data.csv  excercises.ipynb  notebook_tips.ipynb
phases/00-setup-and-tooling/07-docker-for-ai/code/: Dockerfile  docker-compose.yml
phases/00-setup-and-tooling/07-docker-for-ai/code/rust/: Cargo.toml  Dockerfile
phases/00-setup-and-tooling/07-docker-for-ai/code/rust/src/: main.rs
site/: data.js
