[package]
name = "first_api_call_local"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
